movies changed to medias
