# src/docs/apiDocs.yml
@@ -11,20 +11,20 @@ servers:
     variables: {}
     description: Cloud server
 tags:
-  - name: movies
-    description: movies operations
+  - name: medias
+    description: medias operations
 paths:
-  /movies/{movieId}/poster:
+  /medias/{mediaId}/poster:
     post:
       tags:
-        - movies
+        - medias
       summary: uploads an image
       description: ""
       operationId: uploadFile
       parameters:
-        - name: movieId
+        - name: mediaId
           in: path
-          description: ID of movie to update
+          description: ID of media to update
           required: true
           schema:
             type: integer
@@ -47,7 +47,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Movies"
+                $ref: "#/components/schemas/Medias"
 
 components:
   responses:
@@ -76,10 +76,10 @@ components:
           schema:
             $ref: "#/components/schemas/Error"
   schemas:
-    Movies:
+    Medias:
       type: object
       properties:
-        movieId:
+        mediaId:
           type: string
         Title:
           type: string
